--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a
       href="#/"
       class="inline-flex items-center justify-center min-w-[45px] min-h-[45px] px-3 py-2 text-lg font-bold text-gray-800"
-      >
+      ><img src="public/images/logofs.png" alt="Logo Ceritain" class="w-15 h-15 mb-2 rounded-full object-cover">
           CeritaBersama
       </a>
   
